now changes color and text

--- a/ButtonColor/src/Resources/app/storefront/src/scss/base.scss
+++ b/ButtonColor/src/Resources/app/storefront/src/scss/base.scss
@@ -1,3 +1,7 @@
-.confim-color {
-    --bs-btn-bg: green;
+.confirm-color {
+    --bs-btn-bg: teal;
+
+    &:hover {
+        background-color: teal!important;
+    }
 }
